fix spacing in the newly added section

--- a/css/styles.css
+++ b/css/styles.css
@@ -206,7 +206,7 @@ h4 {
 
 .side-content-elevated {
   background-color: rgba(0, 0, 0, 0.5);
-  padding: 0.5rem;
+  /* padding: 0.5rem; */
   border: #3041FF solid 2px;
   margin-bottom: 1rem;
 
@@ -215,6 +215,10 @@ h4 {
 
   max-height: 256px;
   overflow-y: auto;
+}
+
+.side-content-elevated-padding {
+  padding: 0.5rem;
 }
 
 .marquee {
